--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1756,7 +1756,7 @@ body::-webkit-scrollbar-track {
 
 .works-line {
   width: 100%;
-  border: 1px solid rgba(0, 0, 0, 0.4);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
   margin-top: ($w * 100);
 }
 
