--- a/css/main.css
+++ b/css/main.css
@@ -1704,7 +1704,7 @@ body::-webkit-scrollbar-track {
 
 .works-line {
   width: 100%;
-  border: 1px solid rgba(0, 0, 0, 0.4);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
   margin-top: 4.7619047619vw;
 }
 
