--- a/css/main.css
+++ b/css/main.css
@@ -292,6 +292,7 @@ body::-webkit-scrollbar-track {
 @media (min-width: 480px) {
   .header__menu-pc {
     display: flex;
+    align-items: center;
   }
 }
 @media (max-width: 479.98px) {
@@ -361,15 +362,6 @@ body::-webkit-scrollbar-track {
 .header__inst svg:hover {
   fill: rgb(204, 51, 18);
   transition: all 0.3s ease 0s;
-}
-.header::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 3000;
 }
 .header__body {
   position: relative;
@@ -1796,11 +1788,21 @@ body::-webkit-scrollbar-track {
 }
 .service__btn a {
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   max-width: 12.380952381vw;
+  height: 12.380952381vw;
   width: 100%;
+  border-radius: 50%;
+  border: 2px solid #492E18;
+}
+.service__btn a:hover img {
+  transform: rotate(-46deg);
 }
 .service__btn a img {
-  width: 100%;
+  width: 42%;
+  transition: all 0.3s ease 0s;
 }
 .service__btn a span {
   position: absolute;
